Tests/Examples/bad/lex/LettersAfterNum.lifp
123.3203wefijwefoijeoifj # letters after number

124+390

1.0++

1.32.432

1..2

